<resources>
    <string name="app_name">SuiviConso</string>
    <string name="user">Firstname</string>
    <string name="date">Date : </string>
    <string name="editDate">__/__/__</string>
    <string name="hour">Hour : </string>
    <string name="editHour">__:__</string>
    <string name="plus_btn"> + </string>
    <string name="minus_btn"> - </string>
    <string name="delete_btn">Delete</string>
    <string name="summary">Summary : </string>
    <string name="water">Water : </string>
    <string name="alcool">Alcool : </string>
    <string name="water_value">Water consumption</string>
    <string name="alcool_value">Alcool consumption</string>
    <string name="week_summary">Week summary : </string>
    <string name="database_btn">DATABASE</string>
    <string name="settings">SETTINGS</string>
    <string name="lists">LISTS</string>
</resources>
